<resources>
    <string name="app_name">Vivir es decidir</string>
    <string name="content_description">image</string>
    <string name="google_oauth_token">129474455401-v4gggilchel65hekg2hch8oh2datktmn.apps.googleusercontent.com</string>
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="insterstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="common_yes">Si</string>
    <string name="common_no">No</string>
    <string name="error_title">Vaya, parece que algo ha salido mal…</string>
    <string name="error_description">Por favor, inténtalo de nuevo más tarde.</string>
    <string name="error_btn">Cerrar</string>
    <string name="no_more_title">Has acabado con todo</string>
    <string name="no_more_description">No hay más decisiones que tengas que tomar por el momento.</string>
    <string name="no_more_btn">Salir</string>
    <string name="login_welcome">Bienvenido a <b>Vivir es decidir</b></string>
    <string name="login_welcome_description">Aquí podrás decidir y opinar sin ningún tipo de filtro ni tapujo</string>
    <string name="login_title">Inicia sesión con tu cuenta de Google para poder:</string>
    <string name="login_google">Iniciar sesión</string>
    <string name="nav_dilemmas">Dilemas</string>
    <string name="nav_dualism">Dualismos</string>
    <string name="nav_my_info">Mi información</string>
    <string name="nav_profile">Mi perfil</string>
    <string name="nav_saved">Guardado</string>
    <string name="nav_sent">Mis ideas</string>
    <string name="nav_drawer_send_questions">Envía tus ideas</string>
    <string name="nav_drawer_more_apps">Aplicaciones parecidas</string>
    <string name="init_title">¿Sobre qué quieres decidir?</string>
    <string name="init_dilemmas">Dilemas</string>
    <string name="init_dilemmas_description">Debes elegir si aceptas o rechazas una situación donde recibirás algo bueno, siempre que estés dispuesto a asumir la consecuencia que conlleva.</string>
    <string name="init_dualisms">Dualismos</string>
    <string name="init_dualisms_description">Dos opciones, principios, ideas, sentimientos, fuerzas opuestas…\nElige una y observa cuánta gente piensa como tú.</string>
    <string name="init_go">Vamos</string>
    <string name="init_profile_title">Mi perfil</string>
    <string name="init_profile_description">Accede a toda tu información.</string>
    <string name="init_send_data_title">Envía tus ideas</string>
    <string name="init_send_data_description">¿Quieres compartir con el mundo tus brillantes ideas? Envía tus dilemas o tus dualismos y deja que la gente opine.</string>
    <string name="dilemma_description">Los dilemas tienen una parte buena y una consecuencia mala.\n\nTú decides si aceptas o rechazas.</string>
    <string name="dualism_description">Un dualismo es la confrontación entre dos cosas que no pueden coexistir.\n\nSólo puedes elegir una.</string>
    <string name="send_data_dilemma_title">Enviar un <b>dilema</b></string>
    <string name="send_data_dilemma_subtitle">Un dilema consiste en decidir si aceptas hacer realidad una buena situación a pesar de tener que cumplir con una consecuencia negativa.</string>
    <string name="send_data_dilemma_example">Puedes teletransportarte <b>pero</b> pierdes una pierna.</string>
    <string name="send_data_dualism_title">Enviar un <b>dualismo</b></string>
    <string name="send_data_dualism_subtitle">Una dualismo consiste en tomar una decisón entre dos cosas enfrentadas</string>
    <string name="send_data_dualism_example">Tortilla de patata con cebolla <b>o</b> sin cebolla.</string>
    <string name="send_data_for_example">Por ejemplo</string>
    <string name="send_data_send_as">Enviar como</string>
    <string name="send_data_send">Enviar</string>
    <string name="send_data_error_empty">No has rellenado todos los campos</string>
    <string name="rules">Reglas</string>
    <string name="rules_one_numeration">1.</string>
    <string name="rules_one">No está permitido enviar nada que sea discriminatorio o pueda resultar ofensivo.</string>
    <string name="rules_two_numeration">2.</string>
    <string name="rules_two">No uses información personal, ni tuya ni de nadie.</string>
    <string name="rules_three_numeration">3.</string>
    <string name="rules_three">No debe haber publicidad en el dilema o en el dualismo a enviar. No spam.</string>
    <string name="rules_four_numeration">4.</string>
    <string name="rules_four">Haz que sea entretenido e interesante. No fuerces tu cerebro, si no tienes ideas ¡ya se te ocurrirá algo más adelante!</string>
    <string name="send_dilemma_title">Enviar dilema</string>
    <string name="send_dilemma_txt_top_hint">Algo bueno</string>
    <string name="send_dilemma_txt_bottom_hint">Consecuencia mala</string>
    <string name="send_dilemma_txt_empty">0 / 200</string>
    <string name="send_dilemma_txt_max">%s / 200</string>
    <string name="send_dualism_title">Enviar dualismo</string>
    <string name="send_dualism_explanation_title">Texto explicativo</string>
    <string name="send_dualism_explanation_hint">P.ej: <i>¿A qué hora te acuestas normalmente?</i></string>
    <string name="send_dualism_only_option_one_hint">Opción 1:  <i>Gafas</i></string>
    <string name="send_dualism_only_option_two_hint">Opción 2:  <i>Lentillas</i></string>
    <string name="send_dualism_option_one_hint">Opción 1: <i>Antes de las 12</i></string>
    <string name="send_dualism_option_two_hint">Opción 2: <i>Después de las 12</i></string>
    <string name="send_dualism_txt_empty">0 / 200</string>
    <string name="send_dualism_txt_max">%s / 200</string>
    <string name="send_dualism_explanation_max">%s / 50</string>
    <string name="send_dualism_explanation_empty">0 / 50</string>
    <string name="send_dualism_result_perfect_title">¡Perfecto! Se ha enviado correctamente</string>
    <string name="send_dualism_result_perfect_subtitle">Puedes encontrarlo en <b><i>Mis ideas</i></b></string>
    <string name="send_dualism_result_sww_title">Vaya, parece que algo ha salido mal…</string>
    <string name="send_dualism_result_sww_subtitle">¿Quieres intentarlo de nuevo?</string>
    <string name="send_dualism_result_resend">Enviar otra</string>
    <string name="send_dualism_result_retry">Reintentar</string>
    <string name="send_dualism_result_exit">Cerrar</string>
    <string name="dashboard_but">Pero</string>
    <string name="dashboard_or">O</string>
    <string name="dashboard_btn_yes">A tope</string>
    <string name="dashboard_btn_no">No lo creo</string>
    <string name="dashboard_votes">Votos</string>
    <string name="dashboard_dualism_votes">%s votos</string>
    <string name="dashboard_next">Siguiente</string>
    <string name="dashboard_sent_by">Enviado por</string>
    <string name="dashboard_no_comments">Todavía no hay comentarios, ¡da el primer paso!</string>
    <string name="dashboard_share_question">¿Aceptas?</string>
    <string name="dashboard_share_which_take">¿Cuál eliges?</string>
    <string name="dashboard_share_more_in">Todo esto y mucho más en</string>
    <string name="dashboard_share_url">https://play.google.com/store/apps/details?id=com.mmfsin.estereotipia&amp;hl=es_CL&amp;gl=KR</string>
    <string name="menu_dashboard_share">Compartir</string>
    <string name="menu_dashboard_comment">Comentar</string>
    <string name="menu_dashboard_copy">Copiar texto</string>
    <string name="menu_dashboard_set_fav">Guardar como favorito</string>
    <string name="menu_dashboard_delete_fav">Eliminar favorito</string>
    <string name="menu_dashboard_report">Reportar</string>
    <string name="menu_dashboard_dilemma_copied">Dilema copiado al portapapeles</string>
    <string name="menu_dashboard_dualism_copied">Dualismo copiado al portapapeles</string>
    <string name="report_text">¿Crees que el %s infringe alguna normativa y quieres reportarlo?</string>
    <string name="report_subtext">Pulsa el botón <i>Enviar reporte</i> y lo investigaremos.</string>
    <string name="report_btn_send_report">Enviar reporte</string>
    <string name="report_btn_close">No enviar</string>
    <string name="report_dilemma">dilema</string>
    <string name="report_dualism">dualismo</string>
    <string name="report_comment">comentario</string>
    <string name="report_finish">Reportado correctamente</string>
    <string name="comments_hint">Escribe aquí…</string>
    <string name="comments_dilemma">%s <b>pero</b> %s</string>
    <string name="comments_dualism">%s <b>o</b> %s</string>
    <string name="comments_right_now">Ahora</string>
    <string name="comments_today">Hoy</string>
    <string name="comments_yesterday">Ayer</string>
    <string name="comments_two_days">Antes de ayer</string>
    <string name="comments_few_days">Hace unos días</string>
    <string name="comments_one_week">Hace una semana</string>
    <string name="comments_two_week">Hace 2 semanas</string>
    <string name="comments_three_week">Hace 3 semanas</string>
    <string name="comments_one_month">Hace un mes</string>
    <string name="comments_two_month">Hace 2 meses</string>
    <string name="comments_three_month">Hace 3 meses</string>
    <string name="comments_more_than_three_month">Hace mucho tiempo</string>
    <string name="comments_error">Indefinido</string>
    <string name="comments_answer">Responder</string>
    <string name="comments_delete">Eliminar</string>
    <string name="comments_report">Reportar</string>
    <string name="comments_log_in">Inicia sesión para dejar un comentario</string>
    <string name="comment_already_voted">Ya votaste así este comentario</string>
    <string name="comment_reply">Responder</string>
    <string name="comment_one_reply"><u>1 Respuesta</u></string>
    <string name="comment_replies"><u>%s Respuestas</u></string>
    <string name="comment_send">Enviar</string>
    <string name="profile_title">Mi perfil</string>
    <string name="user_profile_hello">Hola</string>
    <string name="user_profile_how_you_doing">¿Cómo te va?</string>
    <string name="user_profile_my_dilemmas">Mis ideas</string>
    <string name="user_profile_my_dilemmas_description">Pulsa aquí para ver los dilemas y los dualismos que has enviado.</string>
    <string name="user_profile_my_favs">Mis favoritos</string>
    <string name="user_profile_navigate">Vamos</string>
    <string name="user_profile_my_favs_description">Pulsa aquí para ver los dilemas y los dualismos que has guardado como favoritos.</string>
    <string name="profile_close_session_confirm">¿Quieres cerrar sesión?</string>
    <string name="profile_close_session">Cerrar sesión</string>
    <string name="other_profile_ideas_title">Enviado por %s</string>
    <string name="other_profile_dilemmas">Dilemas</string>
    <string name="other_profile_dualisms">Dualismos</string>
    <string name="other_profile_dilemmas_description">Pulsa para ver los dilemas que ha enviado %s.</string>
    <string name="other_profile_dualisms_description">Pulsa para ver los dualismos que ha enviado %s.</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="edit_profile_add_rrss"><u>Mis redes sociales</u></string>
    <string name="edit_profile_rrss">Redes sociales</string>
    <string name="edit_profile_rrss_no_ats">Escribe solo el nombre, sin @</string>
    <string name="edit_profile_rrss_instagram">Instagram</string>
    <string name="edit_profile_rrss_x">X</string>
    <string name="edit_profile_rrss_tiktok">TikTok</string>
    <string name="edit_profile_rrss_youtube">Youtube</string>
    <string name="edit_profile_save">Guardar</string>
    <string name="saved_data_dilemmas">Dilemas</string>
    <string name="saved_data_dualisms">Dualismos</string>
    <string name="saved_data_title">Guardado</string>
    <string name="saved_data_empty">No hay nada guardado</string>
    <string name="saved_error_title">Vaya, algo ha salido mal…</string>
</resources>