<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_dilemmas"
                android:icon="@drawable/ic_dilemma_yes_trans"
                android:title="@string/nav_dilemmas" />
            <item
                android:id="@+id/nav_dualism"
                android:icon="@drawable/ic_dilemma_yes_trans"
                android:title="@string/nav_dualism" />
        </menu>
    </item>

    <item android:title="@string/nav_my_info">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_fav_on"
                android:title="@string/nav_saved" />
            <item
                android:id="@+id/nav_sent"
                android:icon="@drawable/ic_lightbulb"
                android:title="@string/nav_sent" />
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/nav_send_questions"
            android:icon="@drawable/ic_send"
            android:title="@string/nav_drawer_send_questions" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_mmf"
            android:title="@string/nav_drawer_more_apps" />
    </group>
</menu>