<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_bottom_dialog">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btn_answer"
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/comments_answer"
            app:drawableStartCompat="@drawable/ic_comment" />

        <TextView
            android:id="@+id/btn_delete"
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/comments_delete"
            app:drawableStartCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/btn_report"
            style="@style/MediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/comments_report"
            app:drawableStartCompat="@drawable/ic_warning" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>